--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,12 +35,11 @@
         android:layout_marginEnd="16dp"
         android:background="@color/white"
         android:backgroundTint="@color/white"
-        android:text="@string/anagram"
+        android:text="@string/empty_text"
         android:textColor="@color/grey_middle"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/btConvert"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_filter" />
 
@@ -53,7 +52,6 @@
         app:cornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_anagram"
         app:rippleColor="@color/grey_dark" />
