--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -36,13 +36,13 @@
         android:text="@string/empty_text"
         android:textColor="@color/grey_middle"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/btConvert"
+        app:layout_constraintBottom_toTopOf="@+id/bt_convert"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_filter" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btConvert"
+        android:id="@+id/bt_convert"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/button"
